drug regimen analysis

--- a/Pymaceuticals/pymaceuticals_starter.ipynb
+++ b/Pymaceuticals/pymaceuticals_starter.ipynb
@@ -446,14 +446,182 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Median</th>\n",
+       "      <th>Mean</th>\n",
+       "      <th>Variance</th>\n",
+       "      <th>Standard Deviation</th>\n",
+       "      <th>Standard Error of the Mean</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Drug Regimen</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Capomulin</th>\n",
+       "      <td>41.557809</td>\n",
+       "      <td>40.675741</td>\n",
+       "      <td>24.947764</td>\n",
+       "      <td>4.994774</td>\n",
+       "      <td>0.329346</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ceftamin</th>\n",
+       "      <td>51.887253</td>\n",
+       "      <td>52.677435</td>\n",
+       "      <td>39.073142</td>\n",
+       "      <td>6.250851</td>\n",
+       "      <td>0.471176</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Infubinol</th>\n",
+       "      <td>51.820584</td>\n",
+       "      <td>52.884795</td>\n",
+       "      <td>43.128684</td>\n",
+       "      <td>6.567243</td>\n",
+       "      <td>0.492236</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ketapril</th>\n",
+       "      <td>53.739593</td>\n",
+       "      <td>55.345698</td>\n",
+       "      <td>68.149888</td>\n",
+       "      <td>8.255295</td>\n",
+       "      <td>0.605308</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Naftisol</th>\n",
+       "      <td>52.556066</td>\n",
+       "      <td>54.484541</td>\n",
+       "      <td>65.805367</td>\n",
+       "      <td>8.112051</td>\n",
+       "      <td>0.599660</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Placebo</th>\n",
+       "      <td>52.316010</td>\n",
+       "      <td>54.083767</td>\n",
+       "      <td>61.051374</td>\n",
+       "      <td>7.813538</td>\n",
+       "      <td>0.582387</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Propriva</th>\n",
+       "      <td>50.965298</td>\n",
+       "      <td>52.441163</td>\n",
+       "      <td>43.061679</td>\n",
+       "      <td>6.562140</td>\n",
+       "      <td>0.527084</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ramicane</th>\n",
+       "      <td>40.673236</td>\n",
+       "      <td>40.216745</td>\n",
+       "      <td>23.486704</td>\n",
+       "      <td>4.846308</td>\n",
+       "      <td>0.320955</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Stelasyn</th>\n",
+       "      <td>52.488221</td>\n",
+       "      <td>54.284444</td>\n",
+       "      <td>59.303779</td>\n",
+       "      <td>7.700895</td>\n",
+       "      <td>0.573991</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Zoniferol</th>\n",
+       "      <td>51.909027</td>\n",
+       "      <td>53.328023</td>\n",
+       "      <td>48.309216</td>\n",
+       "      <td>6.950483</td>\n",
+       "      <td>0.518058</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 Median       Mean   Variance  Standard Deviation  \\\n",
+       "Drug Regimen                                                        \n",
+       "Capomulin     41.557809  40.675741  24.947764            4.994774   \n",
+       "Ceftamin      51.887253  52.677435  39.073142            6.250851   \n",
+       "Infubinol     51.820584  52.884795  43.128684            6.567243   \n",
+       "Ketapril      53.739593  55.345698  68.149888            8.255295   \n",
+       "Naftisol      52.556066  54.484541  65.805367            8.112051   \n",
+       "Placebo       52.316010  54.083767  61.051374            7.813538   \n",
+       "Propriva      50.965298  52.441163  43.061679            6.562140   \n",
+       "Ramicane      40.673236  40.216745  23.486704            4.846308   \n",
+       "Stelasyn      52.488221  54.284444  59.303779            7.700895   \n",
+       "Zoniferol     51.909027  53.328023  48.309216            6.950483   \n",
+       "\n",
+       "              Standard Error of the Mean  \n",
+       "Drug Regimen                              \n",
+       "Capomulin                       0.329346  \n",
+       "Ceftamin                        0.471176  \n",
+       "Infubinol                       0.492236  \n",
+       "Ketapril                        0.605308  \n",
+       "Naftisol                        0.599660  \n",
+       "Placebo                         0.582387  \n",
+       "Propriva                        0.527084  \n",
+       "Ramicane                        0.320955  \n",
+       "Stelasyn                        0.573991  \n",
+       "Zoniferol                       0.518058  "
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Generate a summary statistics table of mean, median, variance, standard deviation, and SEM of the tumor volume for each regimen\n",
     "\n",
     "# Use groupby and summary statistical methods to calculate the following properties of each drug regimen: \n",
     "# mean, median, variance, standard deviation, and SEM of the tumor volume. \n",
+    "\n",
+    "# #calculations\n",
+    "\n",
+    "# Regimen_df = merge_df.set_index(\"Drug Regimen\")\n",
+    "                                            \n",
+    "median = merge_df.groupby([\"Drug Regimen\"]).median()[\"Tumor Volume (mm3)\"].rename(\"Medians\")  \n",
+    "mean = merge_df.groupby([\"Drug Regimen\"]).mean()[\"Tumor Volume (mm3)\"].rename(\"Means\")                                                          \n",
+    "variance = merge_df.groupby([\"Drug Regimen\"]).var()[\"Tumor Volume (mm3)\"].rename(\"Variance\")   \n",
+    "std = merge_df.groupby([\"Drug Regimen\"]).std()[\"Tumor Volume (mm3)\"].rename(\"Standard Deviation\")   \n",
+    "sem = merge_df.groupby([\"Drug Regimen\"]).sem()[\"Tumor Volume (mm3)\"].rename(\"SEM\")   \n",
+    "\n",
+    "# #create dataframe\n",
+    "regimen_analysis = pd.DataFrame({\"Median\": median, \"Mean\": mean, \"Variance\": variance, \"Standard Deviation\": std, \"Standard Error of the Mean\": sem})\n",
+    "regimen_analysis\n",
     "# Assemble the resulting series into a single summary dataframe.\n",
     "\n"
    ]
